# arch-installer

./: .gitignore  Cargo.toml  Makefile  README.md  ext4.sh  install.sh  zfs.sh
src/: device.rs  main.rs  tests.rs
src/filesystem/: ext4.rs  fat.rs  mod.rs  zfs.rs
